# BetterLogging

./: .gitignore  LICENSE  README.md  pyproject.toml
betterlogging/: blogging.py
src/betterlogging/: __init__.py  blogging.py
