[project]
name = "prettysimplelogging"
version = "0.2.0"
authors = [{name="Regan Willis", email="reganwillis@outlook.com"}]
description = "Better Logging"
dependencies = [
	"rich"
]
license = "MIT"

[project.urls]
Homepage = "https://github.com/reganwillis/BetterLogging"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
